--- a/Stage/templates/carousel.html
+++ b/Stage/templates/carousel.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <div id="carousel" class="carousel slide" data-ride="carousel">
 	<ol class="carousel-indicators">
         <li data-target="#carousel" data-slide-to="0" class="active"></li>
@@ -7,7 +8,7 @@
 	<div class="carousel-inner">
 
 		<div class="carousel-item active">
-			<div class="first-slide"> Première image du slide </div>
+			<div class="first-slide"> Première image du slide </div>  <!-- Cette balise div sera remplacée par la balise img -->
 			<div class="container">
 				<div class="carousel-caption"> <p> Premier slide </p> </div>
 				<div class="text-left">
@@ -19,7 +20,7 @@
 		</div>
 
 		<div class="carousel-item">
-			<div class="second-slide"> Deuxième image du slide </div>
+			<div class="second-slide"> Deuxième image du slide </div> <!-- Cette balise div sera remplacée par la balise img -->
 			<div class="container">
 				<div class="carousel-caption"> <p> Deuxième slide </p> </div>
 				<div class="text-center">
@@ -31,7 +32,7 @@
 		</div>
 
 		<div class="carousel-item">
-			<div class="third-slide"> Troisième image du slide </div>
+			<div class="third-slide"> Troisième image du slide </div> <!-- Cette balise div sera remplacée par la balise img -->
 			<div class="container">
 				<div class="carousel-caption"> <p> Troisième slide </p> </div>
 				<div class="text-right">
