--- a/Stage/templates/recherche.html
+++ b/Stage/templates/recherche.html
@@ -1,4 +1,6 @@
+ {% if user.type_personne == 'Etudiant' %} 
  <form class="" id="recherche" method="get" action="{% url 'Rapport:resultats' %}" style="float: right; margin-bottom: 4em;">
     <input class="" type="search" placeholder="étudiant, thème, mots clés, ..." name="champ" width="100">
     <button type="submit" class=""> <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mx-1"><circle cx="10.5" cy="10.5" r="7.5"></circle><line x1="21" y1="21" x2="15.8" y2="15.8"></line></svg> </button>
 </form>
+{% endif %} 
