--- a/Stage/static/bootstrap/css/bootstrap.css
+++ b/Stage/static/bootstrap/css/bootstrap.css
@@ -1974,7 +1974,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
 }
 
 .form-group {
-  margin-bottom: 1rem;
+  margin-bottom: 1.5em;
 }
 
 .form-text {
