--- a/Stage/templates/inscription.html
+++ b/Stage/templates/inscription.html
@@ -1,16 +1,23 @@
 {% extends "base1.html" %}
 {% load staticfiles %}
+{% load crispy_forms_tags %}
+{% load crispy_forms_field %}
+{% load bootstrap4 %}
+{% bootstrap_css %}
+{% bootstrap_javascript jquery='full' %}
 {% block title %}Inscription{% endblock %}
-{% block autreCSS%} <link rel="stylesheet" type="text/css" href="{% static 'css/form.css' %}"/> {% endblock %}
+{% block autreCSS%} {{etudiant.media}}
+{{postulant.media}} 
+ {% endblock %}
 {% block bodyId %}inscription{% endblock %}
 
 {% block contenu %}
 	<h1> Inscription </h1>
 
 	<form >
-		<p>
-			<label for="typeProfile"> S'inscrire en tant que: </label>
-			<select id = "typeProfile" name="typeProfile">
+		<p class="row">
+			<label for="typeProfile" class="col-5"> S'inscrire en tant que: </label>
+			<select id = "typeProfile" name="typeProfile" class="form-control col-6">
 				<option value="etudiant" {% if etudiant.is_bound %}
 						selected="selected" {% endif %}> Étudiant </option>
 				<option value="postulant" {% if postulant.is_bound %} 
@@ -21,50 +28,36 @@
 
 	<form action="" method="post" id = "FormEtudiant">
 		{% csrf_token %}
-		<fieldset>
-			<legend> Information Personnelle </legend>
-			{{etudiant.as_p}}
-		</fieldset>
+		{% crispy etudiant %}
 
-		<fieldset>
-			<legend> Compte </legend>
-			<p class="errorlist">{{ erreur }}</p>
-			{{compte.as_p}}
-		</fieldset>
+		<p class="errorlist">{{ erreur }}</p>
+		{% crispy compte %}
 
-		<div class="btn bnt-group">
-			<input type="hidden" value="etudiant", name="typeProfile" />
-			<input type="submit" value="Envoyer" class="btn btn-success btn-link" />
-			<a class="btn btn-danger" href="{% url 'login' %}"> Annuler </a>
+		<div class="row">
+			<input type="hidden" value="etudiant" name="typeProfile" />
+			<input type="submit" value="Envoyer" class="btn btn-success btn-link col-3 float-left" />
+			<div class="offset-6"></div>
+			<a class="btn btn-danger float-right col-3" href="{% url 'login' %}"> Annuler </a>
 		</div>
 		
 	</form>
 
 	<form action="" method="post" id = "FormPostulant">
 		{% csrf_token %}
-		<fieldset>
-			<legend> Information Personnelle </legend>
-			{{postulant.as_p}}
-		</fieldset>
-
-		<fieldset>
-			<legend> Choix Formation Universitaire </legend>
-			{{formation.as_p}}
-		</fieldset>
+		{% crispy postulant %}
 		
-		<fieldset>
-			<legend> Compte </legend>
-			<p class="errorlist">{{ erreur }}</p>
-			{{compte.as_p}}
-		</fieldset>
+		{% crispy formation %}
+		<p class="errorlist">{{ erreur }}</p>
+		{% crispy compte %}
 		
-		<div class="btn bnt-group">
-			<input type="hidden" value="postulant", name="typeProfile" />
-			<input type="submit" value="Envoyer" class="btn btn-success btn-link" />
-			<a class="btn btn-danger" href="{% url 'login' %}"> Annuler </a>
+		<div class="row">
+			<input type="hidden" value="postulant" name="typeProfile" />
+			<input type="submit" value="Envoyer" class="btn btn-success btn-link col-3 float-left" />
+			<div class="offset-6"></div>
+			<a class="btn btn-danger float-right col-3" href="{% url 'login' %}"> Annuler </a>
 		</div>
 	</form>
-	
+
 {% endblock %}
 
 {% block script %}
