--- a/Stage/templates/login.html
+++ b/Stage/templates/login.html
@@ -1,29 +1,23 @@
 {% extends "base1.html" %}
 {% load staticfiles %}
-{% block autreCSS%}  <link rel="stylesheet" type="text/css" href="{% static 'css/form.css' %}"/> {% endblock %}
+{% load crispy_forms_tags %}
+{% block autreCSS%}  <link rel="stylesheet" type="text/css" href="{% static 'css/signin.css' %}"/>
+{{form.media}} {% endblock %}
 {% block title %}Connexion{% endblock %}
 {% block bodyId %}login{% endblock %}
 
 
 {% block contenu %}
 	<h1>Entrez vos informations</h1>
-
 	<ul class="errorlist"> <li> {{activer}} </li> </ul>
-	<form action="" method="post">
-		{% csrf_token %}
-		{{ form.as_p }}
-		<p>
-			<input type="submit" value="Se Connecter" class="btn btn-light">
-			<a href="{% url 'inscription' %}">Créer un compte</a>
-		</p>
-	</form>
+	{% crispy form %}
 {% endblock %}
 
 {% block script %}
 	<script type="text/javascript">
 		$(document).ready(function() {
 			// body...
-			$('#id_email').popover({delay: {show: 500, hide: 200}, trigger: 'hover'});
+			$('#id_pseudo').popover({delay: {show: 500, hide: 200}, trigger: 'hover'});
 			$('#id_password').popover({delay: {show: 500, hide: 200}, trigger: 'hover'});
 		})
 	</script>
