--- a/Rapport/static/css/stage.css
+++ b/Rapport/static/css/stage.css
@@ -27,3 +27,7 @@ dl dt
 	font-weight: bold;
 	font-family: Verdana, Consolas, "Times New Roman", Georgia, Calibri;
 }
+.contenuRens
+{
+	margin-top: 4em;
+}
