--- a/Stage/templates/base2test.html
+++ b/Stage/templates/base2test.html
@@ -120,4 +120,5 @@
 {% block script %}
   <script type="text/javascript" src="{% static 'bootstrap/js/docs.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/base2.js' %}"></script>
+ <!-- <script type="text/javascript" src="{% static 'js/sw.js' %}"></script> -->
 {% endblock %}
