--- a/common/templates/envoi_mail.html
+++ b/common/templates/envoi_mail.html
@@ -27,7 +27,7 @@
 		</header>
 		<h3>Inscription SIDINFOR</h3>
 		{% if type_mail == 'inscription' %}
-			{% if regime == 'étudiant' %}
+			{% if regime == 'etudiant' %}
 			<div>
 				<p>
 				Vous recevez ce mail suite à votre inscription sur la plateforme SIDINFOR en tant qu'étudiant.
@@ -56,7 +56,7 @@
 			{% endif %}
 		{% elif type_mail == 'confirmation' %}
 
-			{% if regime == 'étudiant' %}
+			{% if regime == 'etudiant' %}
 			<div><p>
 				Vous recevez ce mail suite à la confirmation de votre inscription sur la plateforme sidinfor.
         		Cordialement.
