--- a/depot_rapport/templates/suivi_stages.html
+++ b/depot_rapport/templates/suivi_stages.html
@@ -5,7 +5,7 @@
 {% block breadcrumbs %}
     <div class="breadcrumbs">
     <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a> &rsaquo;
-    <a href="{% url 'admin:gestion' %}"> Gestion & Suivi </a> &rsaquo;
+    <a href="{% url 'admin:gestion' %}"> Administration </a> &rsaquo;
     État des stage {{niveau}}
     </div>
 {% endblock %}
