--- a/depot_dossier/templates/gestion_admin.html
+++ b/depot_dossier/templates/gestion_admin.html
@@ -5,13 +5,30 @@
 {% block breadcrumbs %}
     <div class="breadcrumbs">
     <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a> &rsaquo;
-    Gestion & Suivi
+    Administration
     </div>
 {% endblock %}
 
 {% block content %}
 
 <div class="module">
+<div style="margin-bottom: 10px;">
+    <table width="100%">
+        <caption>
+            <a href="{% url 'admin:activation_comptes' %}" class="section" title=""> Activation des comptes étudiants </a>
+        </caption>
+
+        {% comment %}
+        <tr>
+            <th scope="row"> <a href="{% url 'admin:etat_stages' 'Licence 3' %}"> Stages licence </a> </th>
+        </tr>
+        <tr>
+            <th scope="row"> <a href="{% url 'admin:etat_stages' 'Master 2' %}"> Stages master </a> </th>
+        </tr>
+        {% endcomment %}
+    </table>
+</div>
+
 <table width="100%">
     <caption>
         <a href="{% url 'admin:gestion' %}" class="section" title=""> Gestion & Suivi des stages </a>
