--- a/depot_dossier/templates/rens_depot.html
+++ b/depot_dossier/templates/rens_depot.html
@@ -23,25 +23,22 @@
 {% if user.type_personne == 'Postulant' %}
 <div class="row col-12" id="infoDos">
     <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-       	<div class="label">Numéro de dossier:</div>
+       	<div class="label">Dossier:</div>
         <div class="val"> {{user.dossier.numero_dossier}} </div>
     </div>
-    <div class="col-3 col-sm-2 col-md-3 col-lg-3">
-        <div class="label"> Etat du traitement du dossier: </div>
-        <div class="val" id="etatDos">  {% if user.dossier.etat_traitement == 'encours' %}
-        							Encours de traitement
-        						{% elif user.dossier.etat_traitement == 'attente' %}
-        							En attente du remplissage
-        						{% else %}
-        							{{user.dossier.etat_traitement|capfirst}}
-        						{% endif %}
-        </div>
+    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
+        <div class="label"> Etat du dossier: </div>
+        <div class="val" id="etatDos"> 	{{user.dossier.etat_traitement|capfirst}} </div>
     </div>
-    <div class="col-3 col-sm-2 col-md-3 col-lg-3">
+    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
         <div class="label">Date d'inscription:</div>
-        <div class="val"> {{user.dossier.date_inscription|date:'l, d F Y H:i:s'}} </div>
+        <div class="val"> {{user.dossier.date_inscription|date:'SHORT_DATETIME_FORMAT'}} </div>
+	</div>
+	<div class="col-2 col-sm-3 col-md-3 col-lg-3">
+        <div class="label">Dernière modification:</div>
+        <div class="val"> {{user.dossier.date_modif|date:'SHORT_DATETIME_FORMAT'}} </div>
     </div>
-    <div class="col-3 col-sm-2 col-md-3 col-lg-3">
+    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
         <div class="label">Nationalité:</div>
         <div class="val"> {{user.pays.name}} <img src="{{user.pays.flag}}" class="ml-3">  </div>
     </div>
